--- a/environment-docker-prediction-catboost.yaml
+++ b/environment-docker-prediction-catboost.yaml
@@ -23,34 +23,11 @@ dependencies:
   - xz=5.2.6
   - zlib=1.2.12
   - pip:
-    - catboost==1.1
-    - charset-normalizer==2.1.1
-    - cloudpickle==2.2.0
-    - contourpy==1.0.5
-    - cycler==0.11.0
-    - dill==0.3.5.1
-    - docopt==0.6.2
-    - fonttools==4.37.4
-    - idna==3.4
-    - joblib==1.2.0
-    - kiwisolver==1.4.4
-    - numpy==1.21.6
-    - packaging==21.3
-    - pandas==1.5.0
-    - pipreqs==0.4.11
-    - polars==0.16.1
-    - psutil==5.9.2
+    - catboost>=1.1
+    - dill>=0.3.5.1
+    - numpy>=1.23.4
+    - pandas>=1.5.0
+    - polars>=0.16.1
+    - pydicom>=2.3.0
+    - scipy>=1.9.2
     - pyarrow==11.0.0
-    - pydicom==2.3.0
-    - pyparsing==3.0.9
-    - python-dateutil==2.8.2
-    - pytz==2022.4
-    - requests==2.28.1
-    - setuptools==59.8.0
-    - six==1.16.0
-    - slicer==0.0.7
-    - tenacity==8.1.0
-    - threadpoolctl==3.1.0
-    - tqdm==4.64.1
-    - urllib3==1.26.12
-    - yarg==0.1.9
