--- a/environment-docker-prediction-catboost.yaml
+++ b/environment-docker-prediction-catboost.yaml
@@ -27,7 +27,7 @@ dependencies:
     - dill>=0.3.5.1
     - numpy>=1.23.4
     - pandas>=1.5.0
-    - polars>=0.16.1
+    - polars==0.16.13
     - pydicom>=2.3.0
     - scipy>=1.9.2
     - pyarrow==11.0.0
