--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "dill>=0.3.5.1",
     "fasttreeshap>=0.1.6",
     "numpy>=1.23.4",
+    "pandas>=2.2.3",
     "polars>=1.12.0",
     "pyarrow>=18.0.0",
     "pydicom>=2.3.0",
