--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,9 @@ dependencies = [
     "pyarrow>=18.0.0",
     "pydantic>=2.9.2",
     "pydicom>=2.3.0",
+    "requests>=2.32.3",
     "scikit-image>=0.24.0",
-    "scikit-learn>=1.1.2",
+    "scikit-learn==1.4.1.post1",
     "scipy>=1.9.2",
     "tqdm>=4.66.6",
     "xgboost>=1.6.2",
