--- a/config-api-docker.yaml
+++ b/config-api-docker.yaml
@@ -1,6 +1,6 @@
 models:
   prostate_mpmri:
-    path: "/usr/backups/models/metadata/xgb.standard.100.pkl"
+    path: "/models/xgb.standard.100.pkl"
     matches: ["ADC", "DCE", "DWI", "Others", "T2W"]
     heuristics: "prostate_mpmri"
     filters:
