--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "dill>=0.3.5.1",
-    "fasttreeshap>=0.1.6",
     "numpy>=1.23.4",
     "pandas>=2.2.3",
     "polars>=1.12.0",
@@ -26,6 +25,7 @@ dependencies = [
 [project.scripts]
 msc_train = "msc.entrypoints.train:main"
 msc_predict = "msc.entrypoints.predict:main"
+msc_predict_dicomweb = "msc.entrypoints.predict_dicom_web:main"
 msc_feature_extraction = "msc.entrypoints.get_feature_parquet:main"
 
 [project.optional-dependencies]
@@ -49,6 +49,7 @@ train = [
     "catboost>=1.2.7",
     "lightgbm>=4.5.0",
     "xgboost>=2.1.2",
+    "fasttreeshap>=0.1.6",
 ]
 
 pixel = [
